Excercise - 3 - Network resilience and Fault Injection/Policy-service-virtual-service-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: policy-api-virtual-service-pod03
spec:
  hosts:
  - "*"
  gateways:
  - acctrainings-gateway-pod03
  http:
  - match:
    - uri:
        prefix: /api/pod03/policy
    route:
    - destination:
        host: policy-api-pod03
        port:
          number: 8080
    timeout: 5s
    retries:
      attempts: 3
      perTryTimeout: 2s
